crates/biome_cli/tests/snapshots/main_cases_config_extends/extends_should_raise_an_error_for_unresolved_configuration_and_show_verbose.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --verbose test.js
```

## `biome.json`

```json
{ "extends": ["formatTYPO.json", "linter.json"] }
```

## `format.json`

```json
{ "javascript": { "formatter": { "quoteStyle": "single" } } }
```

## `linter.json`

```json
{ "linter": { "enabled": false } }
```

## `test.js`

```js
debugger; console.log("string"); 
```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to resolve the configuration from formatTYPO.json
    
    Caused by:
      Could not resolve formatTYPO.json: module not found
  
  Verbose advice
  
    i Biome tried to resolve the configuration file "formatTYPO.json" in "extends" using "" as the base path.
    


```
